# agenda-tributaria

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml  update-agenda.yml
assets/: main.css  main.js
data/: agenda-2026-01.ics  agenda-2026-01.json  agenda-2026-02.ics  agenda-2026-02.json  agenda-2026-03.ics  agenda-2026-03.json  agenda-2026-04.ics  agenda-2026-04.json  agenda-2026-05.ics  agenda-2026-05.json  index.json
scripts/: agenda_parser.py  build_data_index.py  build_vencimento_guias_index.py  generate_ics.py  holidays.py  import_agenda_xlsx.py  migrate_to_schema_1_1.py  update_agenda_from_rfb_page.py  validate_vencimento_guias.py
site/: index.html
tests/: test_holidays.py  test_ics.py  test_parser.py
vencimento-guias/: 2026-04.json
