[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agenda-tributaria-parser"
version = "0.2.0"
description = "Parser da Agenda Tributária da Receita Federal"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
]

[tool.setuptools]
# Scripts vivem em scripts/ e são importados via PYTHONPATH; não há package distribuível.
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["scripts"]

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true
